--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,7 +5,7 @@
   It contains common <head> tags:
   - title
   - meta tags
-  - CSS link
+  - CSS link (Tailwind CSS compiled output)
 */ %>
 
 <meta charset="utf-8" />
